2010-04-08  Jon Nistor  <nistor@snickers.org>
        * perllib/Torrus/DevDiscover/Arbor_E.pm:
        New parameter: Arbor_E::disable-e100-policymgmt, disable-e100-submgmt
        Added policy management and subscriber information

2010-04-07  Jon Nistor  <nistor@snickers.org>

        * perllib/Torrus/DevDiscover/Arbor_E.pm:
        New parameter: Arbor_E::disable-e100-mem
        Added memory usage per CPU for the e100 series devices

2010-04-04  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/ConfigTree.pm,
	perllib/Torrus/ConfigTree/Writer.pm,
	perllib/Torrus/CGI.pm:
	New parameter: nodeid. It defines a new way of referring
	to subtrees and leaves.
	Also IF-MIB and Foundry discovery is updated.

2010-03-30  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover.pm: 
	Default snmp-max-msg-size is set back to 1470
	
	* perllib/Torrus/DevDiscover/Foundry.pm: new discovery module

2010-03-23  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* xmlconfig/generic/rfc2790.host-resources.xml:
	[Bernhard Schmidt] Simplify the Uptime graph to display only Days

	* xmlconfig/vendor/ucd.ucd-snmp.xml:
	[Bernhard Schmidt] make Block I/O datasources a COUNTER
	correct display units for Memory

	* perllib/Torrus/DevDiscover/UcdSnmp.pm:
	[Bernhard Schmidt] added ssCpuRawSoftIRQ

2010-03-07  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* bin/torrus.fcgi.in: FastCGI support

	* templates/default-login.html: Added "remember me"

	* perllib/Torrus/ApacheHandler.pm: Changed to Torrus::CGI

	* perllib/Torrus/Apache2Handler.pm: Changed to Torrus::CGI.
	Now incompatible with "SetHandler modperl"

	* perllib/Torrus/CGI.pm: New HTTP handler instead of two different
	Apache handlers.

2010-03-05  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* bin/flushmonitors.in: new utility

	* bin/compilexml.in: Dynamic tokenset members are preserved between
	compilations
