@@ -266,7 +266,11 @@ $Torrus::Renderer::globalSearchEnabled = 1;
 @Torrus::Global::xmlAlwaysIncludeLast = ();
 
 # Do we need Web user authentication/authorization ?
-$Torrus::ApacheHandler::authorizeUsers = 1;
+$Torrus::CGI::authorizeUsers = 1;
+
+# Permit anonymous access to some graphs and HTML pages
+$Torrus::CGI::allowAnonym = 1;
+
 
 # User authentication method may be changed locally
 $Torrus::ACL::userAuthModule = 'Torrus::ACL::AuthLocalMD5';
