@@ -1,3 +1,9 @@
+2010-04-11  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* configs/torrus-config.pl:
+	replaced $Torrus::ApacheHandler::authorizeUsers with
+	$Torrus::CGI::authorizeUsers.
+
 2010-04-08  Jon Nistor  <nistor@snickers.org>
         * perllib/Torrus/DevDiscover/Arbor_E.pm:
         New parameter: Arbor_E::disable-e100-policymgmt, disable-e100-submgmt
